style(player): lower toggle button z-index fixes #42

--- a/client/src/features/player/components/PlayerStatus/PlayerStatus.scss
+++ b/client/src/features/player/components/PlayerStatus/PlayerStatus.scss
@@ -112,7 +112,7 @@ div.player-status{
     position: absolute;
     top: 42px;
     right: 16%;
-    z-index: 99;
+    z-index: 20;
     color: black;
     background-color: white;
     padding: 6px 7px 4px 7px;
